<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>se.skltp.takdatahandler</groupId>
  <artifactId>tak-data-handler</artifactId>
  <version>3.4.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>vagvalhandler</module>
    <module>behorighethandler</module>
    <module>common</module>
    <module>report</module>
  </modules>
  <scm>
    <connection>scm:git:https://github.com/skltp/takdatahandler.git</connection>
    <developerConnection>scm:git:https://github.com/skltp/takdatahandler.git</developerConnection>
    <url>https://github.com/skltp/takdatahandler.git</url>
  </scm>
  <distributionManagement>
    <repository>
      <id>release-nexus</id>
      <name>Release Nexus</name>
      <url>${releases-nexus-url}</url>
    </repository>
    <snapshotRepository>
      <id>snapshot-nexus</id>
      <name>Snapshot Nexus</name>
      <url>${snapshot-nexus-url}</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <takcache.version>2.2.0</takcache.version>
    <jacoco.plugin.version>0.8.14</jacoco.plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire.plugin.version>3.5.4</surefire.plugin.version>
    <junit.jupiter.version>5.10.2</junit.jupiter.version>
    <mockito.version>5.21.0</mockito.version>
    <hsacache.version>1.3.0</hsacache.version>
    <slf4j.version>2.0.17</slf4j.version>
    <argLine/>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>se.skltp.hsa-cache</groupId>
        <artifactId>hsa-cache</artifactId>
        <version>${hsacache.version}</version>
      </dependency>
      <dependency>
        <groupId>se.skltp.takcache</groupId>
        <artifactId>takcache</artifactId>
        <version>${takcache.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.jupiter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <repositories>
    <repository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>Inera-snapshots</id>
      <url>https://nexus.drift.inera.se/repository/maven-public/</url>
    </repository>
  </repositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-agent</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.mockito</groupId>
                  <artifactId>mockito-core</artifactId>
                  <version>${mockito.version}</version>
                  <outputDirectory>${project.build.directory}/agents</outputDirectory>
                  <destFileName>mockito-agent.jar</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${surefire.plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <argLine>@{argLine} -javaagent:${project.build.directory}/agents/mockito-agent.jar</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.plugin.version}</version>
        <configuration>
          <argLine>@{argLine} -javaagent:${project.build.directory}/agents/mockito-agent.jar</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>test-coverage</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.plugin.version}</version>
            <executions>
              <execution>
                <id>default-prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>default-report</id>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
